--- a/ui/bower.json
+++ b/ui/bower.json
@@ -2,14 +2,11 @@
     "name": "Web",
     "version": "0.0.0",
     "dependencies": {
-        "angular": "~1.0.5",
-        "angular-resource": "~1.0.5",
-        "angular-cookies": "~1.0.5",
-        "angular-sanitize": "~1.0.5",
+        "bootstrap": "*",
+        "angular": "*",
         "angular-bootstrap": "~0.4.0",
-        "angular-ui-router": "~0.0.1",
         "angular-ui": "~0.4.0",
         "angular-grid": "~2.0.6",
-        "jquery": "~1.8.0"
+        "jquery": "*"
     }
 }
