adding settings/account mngmt

--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "main": "ui/index.html",
   "window": {
-      // "toolbar": false,
+    // "toolbar": false,
       // "frame": false,
-      "width": 1000,
-      "height": 400
+    "width": 1000,
+    "height": 400
   },
   "dependencies": {
-    "exchanger": "*",
     "request": "*",
     "async": "*",
     "agentkeepalive": "*",
     "soap": "~0.2.7",
-    "xml2js": "0.1.14"
+    "xml2js": "0.1.14",
+    "level": "~0.15.0",
+    "levelup": "~0.15.0",
+    "leveldown": "~0.8.0"
   }
 }
