--- a/ui/bower.json
+++ b/ui/bower.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "dependencies": {
         "bootstrap": "*",
-        "angular": "*",
+        "angular": "1.0.8",
         "angular-bootstrap": "~0.4.0",
         "angular-ui": "~0.4.0",
         "angular-grid": "~2.0.6",
